# hs-libgit

./: .gitignore  .travis.yml  LICENSE  README  README.md  git.cabal  libgit.cabal
Lib/: Git.hs
Lib/Git/: Index.hs  Lowlevel.hs  Tree.hs  Type.hs
